# sokoban

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  config.hpp.in  doc_tech.md  doc_user.md  dok_tech.md  dok_uzyt.md  dok_użyt.md  imgui.ini  toolchain-mingw-x64.cmake
docs/: ENG_doc_tech.md  ENG_doc_user.md  PL_dok_tech.md  PL_dok_uzyt.md  doc_tech.md  doc_user.md  dok_tech.md  dok_uzyt.md
lib/imgui-sfml/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install_manifest.txt
res/: player_config.json
res/leadBoard/: stat.txt
res/level_configs/: default.json  test.json
res/levels/custom/: adam  tescik.json  wdawdawdw
res/levels/official/: custom.json  lvl1.json  lvl10.json  lvl11.json  lvl12.json  lvl13.json  lvl14.json  lvl15.json  lvl16.json  lvl17.json  lvl18.json  lvl19.json  lvl2.json  lvl20.json  lvl3.json  lvl4.json  lvl5.json  lvl6.json  lvl7.json  lvl8.json  lvl9.json  test.json  test0.json  test2.json
res/saves/: 111.json  123123.json  ADAM.json  aaa.json  aaaaa.json  adan.json  asdf.json  awdaw.json  bulka.json  bulka2.json  kurwa.json  wadawd.json
src/: CMakeLists.txt  Game.cpp  Game.hpp  Level.cpp  Level.hpp  LevelConfig.cpp  LevelConfig.hpp  PlayerConfig.cpp  PlayerConfig.hpp  fpsCounter.cpp  fpsCounter.hpp  main.cpp  projConfig.hpp
src/entities/: Box.cpp  Box.hpp  Entity.cpp  Entity.hpp  Player.cpp  Player.hpp
src/entities/animation/: Animation.cpp  Animation.hpp  AnimationHandler.cpp  AnimationHandler.hpp  PlayerAniamtion.hpp  PlayerAnimation.cpp  PlayerAnimation.hpp
src/entities/guide/: Guide.cpp  Guide.hpp  PlayerGuide.cpp  PlayerGuide.hpp
src/entities/physics/: Physics.cpp  Physics.hpp
src/entities/physics/collisions/: BoxCollisions.cpp  BoxCollisions.hpp  WallCollisions.cpp  WallCollisions.hpp
src/gui/: EditorGui.cpp  EditorGui.hpp  FpsCounter.cpp  FpsCounter.hpp  ImGuiStyle.hpp  Pages.cpp
src/gui/menu/: Button.cpp  Button.hpp  TextBox.cpp  TextBox.hpp  Title.cpp  Title.hpp  Widget.hpp  WidgetStack.cpp  WidgetStack.hpp  wText.cpp  wText.hpp
src/level/: EntitiesPosition.cpp  EntitiesPosition.hpp  Level.cpp  Level.hpp  LevelConfig.cpp  LevelConfig.hpp  LevelEditor.cpp  LevelEditor.hpp  WinChecker.cpp  WinChecker.hpp
src/level_configs/: default.json  test.json
src/logicalGrid/: LogicalGrid.cpp  LogicalGrid.hpp
src/map/: Grid.cpp  Grid.hpp  Map.cpp  Map.hpp  Tile.cpp  Tile.hpp
src/objects/: Entity.hpp  Player.cpp  Player.hpp
src/sound/: SoundManager.cpp  SoundManager.hpp
src/states/: LevelEditorState.cpp  LevelEditorState.hpp  MainMenuState.cpp  MainMenuState.hpp  PlayingState.cpp  PlayingState.hpp  State.hpp
